--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Особистий веб-сайт Болкуна Дениса</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My first webpages</h1>
+  <!-- Заголовок сторінки -->
+  <header>
+    <h1>Вітаю це сайт Болкуна Дениса</h1>
+    <!-- Меню навігації -->
+    <nav>
+      <ul>
+        <li><a href="#">Головна</a></li>
+        <li><a href="#about">Про мене</a></li>
+        <li><a href="#practical">Практичні роботи</a></li>
+        <li><a href="#labs">Лабораторні заняття</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <!-- Секція "Про мене" -->
+    <section id="about">
+      <h2>Про мене</h2>
+      <img src="photo_of_denis.jpg" alt="Болкун Денис">
+      <p><strong>Ім'я:</strong> Болкун Денис</p>
+      <p><strong>Email:</strong> st8120036@stud.duikt.edu.ua</p>
+<p>Я студент групи КІД-42, який вивчає структуру будування сайту </p>
+    </section>
+
+    <!-- Секція "Практичні роботи" -->
+    <section id="practical">
+      <h2>Практичні роботи</h2>
+      <ul>
+        
+      </ul>
+    </section>
+
+    <!-- Секція "Лабораторні заняття" -->
+    <section id="labs">
+      <h2>Лабораторні заняття</h2>
+      <ul>
+        <li>
+          <strong>Лабораторна 1:</strong> <a href="#">Базовий HTML</a>
+          <p>Опис: Практична робота з HTML-структурою.</p>
+        </li>
+        <li>
+          <strong>Лабораторна 2:</strong> <a href="#">Вступ до CSS</a>
+          <p>Опис: Підключення CSS та базове стилювання.</p>
+        </li>
+      </ul>
+    </section>
+
+  </main>
+
+  <!-- Футер -->
+  <footer>
+    <p>Контакт: ivan.petrenko@example.com</p>
+    <p>Соцмережі: 
+      <a href="https://github.com/ivanpetrenko" target="_blank">GitHub</a> | 
+      <a href="https://t.me/ivanpetrenko" target="_blank">Telegram</a>
+    </p>
+    <p>2023–2025. Університет ІТ</p>
+  </footer>
+
 </body>
 </html>
