--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <section id="practical">
       <h2>Практичні роботи</h2>
       <ul>
-        
+        <li>
+        <strong>Практична робота №1:</strong> <a href="P_1/index.html">Розклад завдань</a>
+          <p>Опис: Практична робота з розкладом занять.</p>
+        </li>
+
       </ul>
     </section>
 
