--- a/P_1/index.html
+++ b/P_1/index.html
@@ -2,113 +2,114 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Розклад занять</title>
+  <title>Розклад занять – Жовтень 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Розклад занять (29.09 – 02.11.2025)</h1>
 
-  <div class="schedule">
-    <!-- Заголовки -->
-    <div class="header">Час</div>
-    <div class="header">29.09.2025</div>
-    <div class="header">06.10.2025</div>
-    <div class="header">13.10.2025</div>
-    <div class="header">20.10.2025</div>
-    <div class="header">27.10.2025</div>
-    <div class="header">03.11.2025</div>
+  <table class="html">
+    <thead>
+      <tr>
+        <th>Час</th>
+        <th>Понеділок</th>
+        <th>Вівторок</th>
+        <th>Середа</th>
+        <th>Четвер</th>
+        <th>П’ятниця</th>
+        <th>Субота</th>
+        <th>Неділя</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- ==== 1 тиждень (29.09 – 05.10) ==== -->
+      <tr><td colspan="8" class="week">1 тиждень (29.09 – 05.10)</td></tr>
+      <tr>
+        <td class="time">09:45–11:20<br>2 пара</td>
+        <td></td>
+        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
+        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">11:45–13:20<br>3 пара</td>
+        <td></td>
+        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
+        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
+        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">13:30–15:05<br>4 пара</td>
+        <td></td>
+        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">15:25–16:50<br>5 пара</td>
+        <td></td>
+        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
+        <td></td>
+        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
+        <td></td><td></td><td></td>
+      </tr>
 
-    <!-- 1 пара -->
-    <div class="time">1 пара<br>08:00–09:35</div>
-    <div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div>
+      <!-- ==== 2 тиждень (06.10 – 12.10) ==== -->
+      <tr><td colspan="8" class="week">2 тиждень (06.10 – 12.10)</td></tr>
+      <tr>
+        <td class="time">09:45–11:20<br>2 пара</td>
+        <td></td>
+        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
+        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">11:45–13:20<br>3 пара</td>
+        <td></td>
+        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
+        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
+        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">13:30–15:05<br>4 пара</td>
+        <td></td>
+        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td class="time">15:25–16:50<br>5 пара</td>
+        <td></td>
+        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
+        <td></td>
+        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
+        <td></td><td></td><td></td>
+      </tr>
 
-    <!-- 2 пара -->
-    <div class="time">2 пара<br>09:45–11:20</div>
-    <div class="empty"></div>
-    <div class="lesson yellow">ЗВВБ-2017[Лк]<br>Дистанц.<br>Федоренко О.С.</div>
-    <div class="lesson yellow">ШІ-2017[Лк]<br>Дистанц.<br>Кисіль Т.М.</div>
-    <div class="lesson yellow">ЗВВБ-2017[Лк]<br>Дистанц.<br>Федоренко О.С.</div>
-    <div class="lesson yellow">ШІ-2017[Лк]<br>Дистанц.<br>Кисіль Т.М.</div>
-    <div class="empty"></div>
+      <!-- ==== 3 тиждень (13.10 – 19.10) ==== -->
+      <tr><td colspan="8" class="week">3 тиждень (13.10 – 19.10)</td></tr>
+      <!-- копіюється той самий шаблон, як вище -->
 
-    <!-- 3 пара -->
-    <div class="time">3 пара<br>11:45–13:20</div>
-    <div class="empty"></div>
-    <div class="lesson yellow">ПРО-2017[Лк]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ХТ-15[Лб]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson yellow">ПРО-2017[Лк]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ХТ-15[Лб]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="empty"></div>
+      <!-- ==== 4 тиждень (20.10 – 26.10) ==== -->
+      <tr><td colspan="8" class="week">4 тиждень (20.10 – 26.10)</td></tr>
+      <!-- копіюється той самий шаблон -->
 
-    <!-- 4 пара -->
-    <div class="time">4 пара<br>13:30–15:05</div>
-    <div class="empty"></div>
-    <div class="lesson yellow">WEB тех-2016[Лб]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">АТМІ-2018[Лб]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson yellow">WEB тех-2016[Лб]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">АТМІ-2018[Лб]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="empty"></div>
-
-    <!-- 5 пара -->
-    <div class="time">5 пара<br>15:25–16:50</div>
-    <div class="empty"></div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="empty"></div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-
-    <!-- Вівторок -->
-    <div class="time">Вівторок</div>
-    <div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div><div class="empty"></div>
-
-    <!-- Середа -->
-    <div class="time">3 пара<br>11:45–13:20</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-    <div class="lesson green">ПРО-2017[Пз]<br>Дистанц.<br>Торощанко Л.І.</div>
-
-    <div class="time">4 пара<br>13:30–15:05</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-    <div class="lesson blue">АТМІ-2018[Пз]<br>Дистанц.<br>Асеєва Л.А.</div>
-
-    <!-- Четвер -->
-    <div class="time">2 пара<br>09:45–11:20</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-    <div class="lesson blue">МЗШ-2020[Лб]<br>Дистанц.<br>Зеленгородський О.С.</div>
-
-    <!-- 3 пара -->
-    <div class="time">3 пара<br>11:45–13:20</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-    <div class="lesson yellow">WEB тех-2016[Пз]<br>Дистанц.<br>Дзябо В.В.</div>
-
-    <!-- 4 пара -->
-    <div class="time">4 пара<br>13:30–15:05</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-    <div class="lesson green">ХТ-15[Пз]<br>Дистанц.<br>Шкура О.М.</div>
-  </div>
+      <!-- ==== 5 тиждень (27.10 – 02.11) ==== -->
+      <tr><td colspan="8" class="week">5 тиждень (27.10 – 02.11)</td></tr>
+      <!-- копіюється той самий шаблон -->
+    </tbody>
+  </table>
 </body>
 </html>
-    <!-- Футер -->
-    <footer>
-        <p>Контакт: Болкун Денис, Номер телефону: +380968315575 </p>
-    </footer>
