--- a/P_1/index.html
+++ b/P_1/index.html
@@ -2,13 +2,15 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Розклад занять – Жовтень 2025</title>
+  <title>Розклад занять</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Розклад занять (29.09 – 02.11.2025)</h1>
 
-  <table class="html">
+  <!-- 1 тиждень -->
+  <h2>1 тиждень (29.09 – 05.10)</h2>
+  <table>
     <thead>
       <tr>
         <th>Час</th>
@@ -22,94 +24,117 @@
       </tr>
     </thead>
     <tbody>
-      <!-- ==== 1 тиждень (29.09 – 05.10) ==== -->
-      <tr><td colspan="8" class="week">1 тиждень (29.09 – 05.10)</td></tr>
       <tr>
-        <td class="time">09:45–11:20<br>2 пара</td>
+        <td>09:45–11:20<br>2 пара</td>
+        <td>ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
         <td></td>
-        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
-        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
-        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
-        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
-        <td></td><td></td>
+        <td>ШІ-2017 [Лк]<br>Дистанц.<br>Кісіль</td>
+        <td>ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td>ШІ-2017 [Лк]<br>Дистанц.<br>Кісіль</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td class="time">11:45–13:20<br>3 пара</td>
+        <td>11:45–13:20<br>3 пара</td>
+        <td>ПРО-2017 [Лк]<br>Дистанц.<br>Тороцанко</td>
         <td></td>
-        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
-        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
-        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
-        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
-        <td></td><td></td>
+        <td>ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td>ПРО-2017 [Лк]<br>Дистанц.<br>Тороцанко</td>
+        <td>ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td class="time">13:30–15:05<br>4 пара</td>
+        <td>13:30–15:05<br>4 пара</td>
+        <td>WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
         <td></td>
-        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
-        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
-        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
-        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
-        <td></td><td></td>
+        <td>АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td>WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td>АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td class="time">15:25–16:50<br>5 пара</td>
+        <td>15:25–16:50<br>5 пара</td>
+        <td>МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленогородський</td>
         <td></td>
-        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
         <td></td>
-        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
-        <td></td><td></td><td></td>
+        <td>МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленогородський</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
-
-      <!-- ==== 2 тиждень (06.10 – 12.10) ==== -->
-      <tr><td colspan="8" class="week">2 тиждень (06.10 – 12.10)</td></tr>
-      <tr>
-        <td class="time">09:45–11:20<br>2 пара</td>
-        <td></td>
-        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
-        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
-        <td class="lesson yellow">ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
-        <td class="lesson yellow">ШІ-2017 [Лк]<br>Дистанц.<br>Кисіль</td>
-        <td></td><td></td>
-      </tr>
-      <tr>
-        <td class="time">11:45–13:20<br>3 пара</td>
-        <td></td>
-        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
-        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
-        <td class="lesson yellow">ПРО-2017 [Лк]<br>Дистанц.<br>Торощанко</td>
-        <td class="lesson green">ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
-        <td></td><td></td>
-      </tr>
-      <tr>
-        <td class="time">13:30–15:05<br>4 пара</td>
-        <td></td>
-        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
-        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
-        <td class="lesson yellow">WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
-        <td class="lesson yellow">АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
-        <td></td><td></td>
-      </tr>
-      <tr>
-        <td class="time">15:25–16:50<br>5 пара</td>
-        <td></td>
-        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
-        <td></td>
-        <td class="lesson yellow">МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленгородський</td>
-        <td></td><td></td><td></td>
-      </tr>
-
-      <!-- ==== 3 тиждень (13.10 – 19.10) ==== -->
-      <tr><td colspan="8" class="week">3 тиждень (13.10 – 19.10)</td></tr>
-      <!-- копіюється той самий шаблон, як вище -->
-
-      <!-- ==== 4 тиждень (20.10 – 26.10) ==== -->
-      <tr><td colspan="8" class="week">4 тиждень (20.10 – 26.10)</td></tr>
-      <!-- копіюється той самий шаблон -->
-
-      <!-- ==== 5 тиждень (27.10 – 02.11) ==== -->
-      <tr><td colspan="8" class="week">5 тиждень (27.10 – 02.11)</td></tr>
-      <!-- копіюється той самий шаблон -->
     </tbody>
   </table>
+
+  <!-- 2 тиждень (копія структури з 1-го) -->
+  <h2>2 тиждень (06.10 – 12.10)</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Час</th>
+        <th>Понеділок</th>
+        <th>Вівторок</th>
+        <th>Середа</th>
+        <th>Четвер</th>
+        <th>П’ятниця</th>
+        <th>Субота</th>
+        <th>Неділя</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>09:45–11:20<br>2 пара</td>
+        <td>ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td></td>
+        <td>ШІ-2017 [Лк]<br>Дистанц.<br>Кісіль</td>
+        <td>ЗВВБ-2017 [Лк]<br>Дистанц.<br>Федоренко</td>
+        <td>ШІ-2017 [Лк]<br>Дистанц.<br>Кісіль</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>11:45–13:20<br>3 пара</td>
+        <td>ПРО-2017 [Лк]<br>Дистанц.<br>Тороцанко</td>
+        <td></td>
+        <td>ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td>ПРО-2017 [Лк]<br>Дистанц.<br>Тороцанко</td>
+        <td>ХТ-15 [Лб]<br>Дистанц.<br>Шкура</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>13:30–15:05<br>4 пара</td>
+        <td>WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td></td>
+        <td>АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td>WEB тех-2016 [Лб]<br>Дистанц.<br>Дзябо</td>
+        <td>АТМІ-2018 [Лб]<br>Дистанц.<br>Асеєва</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>15:25–16:50<br>5 пара</td>
+        <td>МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленогородський</td>
+        <td></td>
+        <td></td>
+        <td>МЗШ-2020 [Лб]<br>Дистанц.<br>Зеленогородський</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- 3, 4 і 5 тиждень — копії цього ж розкладу -->
+  <h2>3 тиждень (13.10 – 19.10)</h2>
+  <table>… (повтор розкладу)</table>
+
+  <h2>4 тиждень (20.10 – 26.10)</h2>
+  <table>… (повтор розкладу)</table>
+
+  <h2>5 тиждень (27.10 – 02.11)</h2>
+  <table>… (повтор розкладу)</table>
+
 </body>
 </html>
